--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,9 @@ h3 {
 .btn {
     font-family: 'Cookie', cursive;
 }
+a {
+    text-decoration: none;
+}
 /* Footer*/
 .footer {  
     margin-right: 20%; 
